--- a/sdmcoletor/webapp/index.html
+++ b/sdmcoletor/webapp/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SDM Coletor</title>
     <style>
+          html, body, #content {
+    height: 100%;
+    margin: 0;
+    padding: 0; }
+  
        /*  html, body {
             height: 100%;
             margin: 0;
@@ -43,8 +48,8 @@
    /*   transform: scale(0.7);
     transform-origin: top left;
   }                                                       */
-</style>
     </style>
+   
     <script
         id="sap-ui-bootstrap"
         src= "https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
